// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`downAll 1`] = `
"relation \\"users\\" does not exist

> 1 | SELECT * FROM users
    |               ^^^^^
"
`;

exports[`downLast 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
]
`;

exports[`downLast 2`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
]
`;

exports[`downOne 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
]
`;

exports[`downOne 2`] = `
"relation \\"users\\" does not exist

> 1 | SELECT * FROM users
    |               ^^^^^
"
`;

exports[`generate 1`] = `
"// auto generated by @databases/pg-migrations - do not edit by hand

import packageMigrations, {MigrationsPackage, packageOperation} from '../';

export {MigrationsPackage};
export default packageMigrations(
  {
    id: 'd000jcbsfkyjcwricki6',
    index: 1,
    name: '00001-init.ts',
    operation: async () =>
      packageOperation(await import('./migrations/00001-init')),
  },
  {
    id: 'd000jcbsfkyrhtasvyy8',
    index: 2,
    name: '00002-update.ts',
    operation: async () =>
      packageOperation(await import('./migrations/00002-update')),
  },
);
"
`;

exports[`upAll 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
  Object {
    "id": 2,
    "name": "Eleanor Brodie",
  },
]
`;

exports[`upOne 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
]
`;

exports[`upOne 2`] = `
Array [
  Object {
    "id": 1,
    "name": "Forbes Lindesay",
  },
  Object {
    "id": 2,
    "name": "Eleanor Brodie",
  },
]
`;
